dnl Process this file with autoconf to produce a configure script.
AC_INIT(Hypre/Hypre_Box.c)
AM_INIT_AUTOMAKE(hypre_babel, 0.3.0)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_SET_MAKE
AC_ARG_WITH(babeldir,[  --with-babeldir=PATH    where PATH/bin/babel is located.],
babeldir=$withval,babeldir=)

if test "x$babeldir" = x; then
  AC_PATH_PROGS(BABEL, babel)
  if test "X$ac_cv_path_BABEL" = X; then
    AC_MSG_ERROR(no babel compiler in $babeldir/bin/, specify --with-babeldir=PATH)
  fi
  AC_CHECK_LIB(babel, babel_Method_constructor)
  if test "$ac_cv_lib_babel_babel_Method_constructor" = no; then 
    AC_MSG_ERROR(cannot find libbabel.a, which is required)
  fi
  babeldir=`dirname $ac_cv_path_BABEL`/..
else
  AC_PATH_PROG(BABEL, babel,, $babeldir/bin)
  if test "X$ac_cv_path_BABEL" = X; then
    AC_MSG_ERROR(no babel compiler in $babeldir/bin/, respecify --with-babeldir=PATH)
  fi
fi

AC_SUBST(babeldir)

dnl Checks for libraries.
dnl Replace `main' with a function in -lHYPRE_ls:
dnl AC_CHECK_LIB(HYPRE_ls, HYPRE_structPCGCreate)
dnl Replace `main' with a function in -lHYPRE_mv:
dnl AC_CHECK_LIB(HYPRE_mv, hypre_StructMatrixCreate)
dnl Replace `main' with a function in -lHYPRE_utilities:
dnl AC_CHECK_LIB(HYPRE_utilities, hypre_BinarySearch)
dnl Replace `main' with a function in -lbabel:
dnl Replace `main' with a function in -lgcc:
dnl AC_CHECK_LIB(gcc, main)
dnl Replace `main' with a function in -lhypre_class:
dnl AC_CHECK_LIB(hypre_class, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, sin)
dnl Replace `main' with a function in -lmpich:
dnl AC_CHECK_LIB(mpich, main)
dnl Replace `main' with a function in -lnsl:
dnl AC_CHECK_LIB(nsl, main)
dnl Replace `main' with a function in -lpthread:
dnl AC_CHECK_LIB(pthread, main)
dnl Replace `main' with a function in -lsocket:
dnl AC_CHECK_LIB(socket, main)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Hypre/Makefile test/Makefile Makefile)
