## Process this file with automake to create Makefile.in

lib_LTLIBRARIES = libHYPRE_blas.la
libHYPRE_blas_la_SOURCES = $(FILES)
libHYPRE_blas_la_LDFLAGS = -avoid-version

#
FILES = \
 dasum.c\
 daxpy.c\
 dcopy.c\
 ddot.c\
 dgemm.c\
 dgemv.c\
 dger.c\
 dnrm2.c\
 drot.c\
 dscal.c\
 dswap.c\
 dsymm.c\
 dsymv.c\
 dsyr2.c\
 dsyr2k.c\
 dsyrk.c\
 dtrmm.c\
 dtrmv.c\
 dtrsm.c\
 dtrsv.c\
 idamax.c\
 blas_utils.c\
 xerbla.c\
 f2c.h\
 hypre_blas.h
