#
# Makefile.am --- automake input file for Hypre
#
## Process this file with automake to create Makefile.in

AUX_DIST = config.guess\
 config.sub\
 install-sh\
 ltconfig\
 ltmain.sh\
 missing\
 mkinstalldirs

EXTRA_DIST = bootstrap acx_blas.m4 acx_misc.m4

MAINTAINERCLEANFILES = Makefile.in\
 stamp.h.in\
 $(AUX_DIST)

