#
# Makefile.am --- automake input file for Hypre
#
## Process this file with automake to create Makefile.in

include 

AUX_DIST = \
 compile\
 config.guess\
 config.sub\
 depcomp\
 install-sh\
 ltmain.sh\
 missing\
 mkinstalldirs

EXTRA_DIST = \
 bootstrap\
 acx_blas.m4\
 acx_lapack.m4\
 acx_misc.m4

MAINTAINERCLEANFILES = \
 HYPRE_config.h.in\
 Makefile.in\
 acinclude.m4\
 stamp.h.in\
 $(AUX_DIST)

